tests/specs/ecosystem/aralroca/diff_dom_streaming/0_1_2.test
aralroca/diff-dom-streaming/0.1.2
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --


error: TS2304 [ERROR]: Cannot find name 'Node'.
type Callback = (node: Node) => void;
                       ~~~~
    at file://<tmpdir>/index.d.ts:1:24

TS2304 [ERROR]: Cannot find name 'Node'.
export default function diff(oldNode: Node, reader: ReadableStreamDefaultReader, forEachStreamNode?: Callback): Promise<void>;
                                      ~~~~
    at file://<tmpdir>/index.d.ts:2:39

TS2304 [ERROR]: Cannot find name 'Node'.
type Callback = (node: Node) => void;
                       ~~~~
    at file://<tmpdir>/src/index.ts:1:24

TS2304 [ERROR]: Cannot find name 'Node'.
export default function diff(oldNode: Node, reader: ReadableStreamDefaultReader, callback?: Callback): Promise<void> {
                                      ~~~~
    at file://<tmpdir>/src/index.ts:2:39

Found 4 errors.

